# markkarpov.art

./: README.md  artworks.yaml  contact.md  env.yaml  exhibitions.yaml  flake.nix  hie.yaml  markkarpov-art.cabal  netlify.toml
.github/workflows/: ci.yaml
app/: Main.hs
art-per-year/: 2022.md  2023.md  2024.md  2025.md  2026.md
essay/: perception-routines.md  real-realism.md  test.md
lib/: Artwork.hs  Essay.hs  Exhibition.hs  Markdown.hs  Medium.hs  PhotoMetadata.hs  Route.hs  Utils.hs
lib/Artwork/: Id.hs
lib/Exhibition/: PerYear.hs
static/css/: bootstrap.min.css
static/js/: custom.js
templates/: art.mustache  artwork.mustache  artworks.mustache  contact.mustache  default.mustache  essay.mustache  essays.mustache  exhibition.mustache  exhibitions.mustache
