cabal-version:   2.4
name:            markkarpov-art
version:         0.1.0
maintainer:      Mark Karpov <markkarpov92@gmail.com>
author:          Mark Karpov <markkarpov92@gmail.com>
tested-with:     ghc ==9.6.3
homepage:        https://github.com/mrkkrp/markkarpov.com
synopsis:        Mark Karpov's personal web site
description:     Mark Karpov's personal web site.
category:        Web
build-type:      Simple
extra-doc-files: README.md

source-repository head
    type:     git
    location: https://github.com/mrkkrp/markkarpov.com.git

library
    exposed-modules:
        Artwork
        Artwork.Id
        Essay
        Exhibition
        Exhibition.PerYear
        Markdown
        Medium
        PhotoMetadata
        Route
        Utils

    hs-source-dirs:   lib
    default-language: GHC2021
    ghc-options:
        -O2 -Wall -threaded -Wall -Werror -Wredundant-constraints
        -Wpartial-fields -Wunused-packages

    build-depends:
        aeson >=2,
        base,
        binary,
        bytestring,
        containers,
        cryptonite,
        lens,
        lens-aeson >=1.2,
        lucid,
        megaparsec,
        mmark,
        mmark-ext,
        modern-uri,
        scientific,
        shake,
        text,
        time

executable mk-art
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options:
        -O2 -Wall -threaded -Wall -Werror -Wredundant-constraints
        -Wpartial-fields -Wunused-packages

    build-depends:
        aeson >=2,
        base,
        containers,
        cryptonite,
        lens,
        lens-aeson >=1.2,
        markkarpov-art,
        shake,
        stache,
        text,
        time,
        vector,
        yaml
